added image upload

--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "lodash": "~2.4.1",
     "ejs": "~0.8.4",
     "mongoose": "~4.0.3",
+        "connect-multiparty": "^1.0.4",
+
     "composable-middleware": "^0.3.0",
     "connect-mongo": "^0.8.1"
   },
